Mejoras en doc convocatoria