@@ -4,6 +4,11 @@ import java.time.LocalDate;
 import java.util.List;
 import java.util.stream.Collectors;
 
+import com.mdnch.webmdnch.dto.enums.DocumentoTipo;
+import com.mdnch.webmdnch.dto.request.DocumentoConfigRequest;
+import com.mdnch.webmdnch.dto.response.DocumentoItemResponse;
+import com.mdnch.webmdnch.entity.ConvocatoriaDocumentoEntity;
+import com.mdnch.webmdnch.repository.ConvocatoriaDocumentoRepository;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -26,12 +31,16 @@ public class ConvocatoriaCasServiceImpl implements ConvocatoriaCasService {
 
     private final ConvocatoriaCasRepository repo;
     private final ConvocatoriaCasMapper mapper;
+    private final ConvocatoriaDocumentoRepository docRepo;
 
-    private final String carpetaDestino = "documentos/cas/"; // carpeta física
+    private final String carpetaDestino = "documentos/cas/";
 
-    public ConvocatoriaCasServiceImpl(ConvocatoriaCasRepository repo, ConvocatoriaCasMapper mapper) {
+    public ConvocatoriaCasServiceImpl(ConvocatoriaCasRepository repo,
+                                      ConvocatoriaCasMapper mapper,
+                                      ConvocatoriaDocumentoRepository docRepo) {
         this.repo = repo;
         this.mapper = mapper;
+        this.docRepo = docRepo;
     }
 
     @Override
@@ -40,38 +49,79 @@ public class ConvocatoriaCasServiceImpl implements ConvocatoriaCasService {
         if (repo.existsByCodigo(request.getCodigo())) {
             throw new IllegalArgumentException("Ya existe una convocatoria con el código: " + request.getCodigo());
         }
-
         ConvocatoriaCasEntity entity = mapper.toEntity(request);
         entity.setEstado(true);
         entity.setResponsable("Admin");
-        entity.setFechaCreacion(LocalDate.now());
+        entity.setFechaCreacion(java.time.LocalDate.now());
 
-        entity.setBasesUrl(guardarYUrl(request.getBases()));
-        entity.setAnexosUrl(guardarYUrl(request.getAnexos()));
-        entity.setComunicado1Url(guardarYUrl(request.getComunicado1()));
-        entity.setComunicado2Url(guardarYUrl(request.getComunicado2()));
-        entity.setEvaluacionCurricularUrl(guardarYUrl(request.getEvaluacionCurricular()));
-        entity.setEvaluacionEntrevistaUrl(guardarYUrl(request.getEvaluacionEntrevista()));
-        entity.setAbsolucionReclamosUrl(guardarYUrl(request.getAbsolucionReclamos()));
-        entity.setResultadosFinalesUrl(guardarYUrl(request.getResultadosFinales()));
 
+// Inicializa (si deseas crear entradas aunque no haya archivos aún, opcional)
+
+
+// Por cada campo archivo conocido, crea/actualiza doc
+        java.util.Map<DocumentoTipo, MultipartFile> archivos = new java.util.LinkedHashMap<>();
+        archivos.put(DocumentoTipo.BASES, request.getBases());
+        archivos.put(DocumentoTipo.ANEXOS, request.getAnexos());
+        archivos.put(DocumentoTipo.COMUNICADO1, request.getComunicado1());
+        archivos.put(DocumentoTipo.COMUNICADO2, request.getComunicado2());
+        archivos.put(DocumentoTipo.EVAL_CURRICULAR, request.getEvaluacionCurricular());
+        archivos.put(DocumentoTipo.EVAL_ENTREVISTA, request.getEvaluacionEntrevista());
+        archivos.put(DocumentoTipo.ABSOLUCION_RECLAMOS, request.getAbsolucionReclamos());
+        archivos.put(DocumentoTipo.RESULTADOS_FINALES, request.getResultadosFinales());
+
+
+        for (var entry : archivos.entrySet()) {
+            MultipartFile mf = entry.getValue();
+            if (mf != null && !mf.isEmpty()) {
+                ConvocatoriaDocumentoEntity doc = new ConvocatoriaDocumentoEntity();
+                doc.setConvocatoria(entity);
+                doc.setTipo(entry.getKey());
+                doc.setUrl(saveFile(mf));
+                doc.setHabilitado(true);
+                entity.getDocumentos().add(doc);
+            }
+        }
+
+
+// Aplica configuración (habilitado/titulo/descripcion/orden)
+        applyConfig(entity, request.getConfig());
+
+
+// Persistir
         ConvocatoriaCasEntity saved = repo.save(entity);
-        return withPublicUrls(mapper.toResponse(saved));
+
+
+// Construir response
+        ConvocatoriaCasResponse res = mapper.toResponse(saved);
+// mantener compatibilidad si aún usas ...Url (opcional)
+        res.setDocumentos(mapDocs(saved.getDocumentos()));
+        res = withPublicUrls(res);
+        return res;
     }
 
     @Override
     public List<ConvocatoriaCasResponse> getAll() {
         return repo.findAll().stream()
                 .map(mapper::toResponse)
-                .map(this::withPublicUrls)
-                .collect(Collectors.toList());
+                .peek(r -> {
+// cargar documentos vía repo hijo (opcional) o por fetch si LAZY/EAGER
+                })
+                .map(r -> {
+                    var e = repo.findById(r.getId()).orElseThrow();
+                    r.setDocumentos(mapDocs(e.getDocumentos()));
+// si mantienes ...Url, puedes seguir decorándolas, pero ideal migrar al arreglo
+                    return r;
+                })
+                .toList();
     }
 
     @Override
     public ConvocatoriaCasResponse findById(Integer id) {
         ConvocatoriaCasEntity entity = repo.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Convocatoria no encontrada con ID: " + id));
-        return withPublicUrls(mapper.toResponse(entity));
+        ConvocatoriaCasResponse r = mapper.toResponse(entity);
+        r.setDocumentos(mapDocs(entity.getDocumentos()));
+        return r;
     }
 
     @Override
@@ -80,22 +130,59 @@ public class ConvocatoriaCasServiceImpl implements ConvocatoriaCasService {
         ConvocatoriaCasEntity entity = repo.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Convocatoria no encontrada con ID: " + id));
 
-        mapper.updateFromRequest(request, entity);
 
-        entity.setBasesUrl(reemplazarSiHayNuevo(entity.getBasesUrl(), request.getBases()));
-        entity.setAnexosUrl(reemplazarSiHayNuevo(entity.getAnexosUrl(), request.getAnexos()));
-        entity.setComunicado1Url(reemplazarSiHayNuevo(entity.getComunicado1Url(), request.getComunicado1()));
-        entity.setComunicado2Url(reemplazarSiHayNuevo(entity.getComunicado2Url(), request.getComunicado2()));
-        entity.setEvaluacionCurricularUrl(reemplazarSiHayNuevo(entity.getEvaluacionCurricularUrl(), request.getEvaluacionCurricular()));
-        entity.setEvaluacionEntrevistaUrl(reemplazarSiHayNuevo(entity.getEvaluacionEntrevistaUrl(), request.getEvaluacionEntrevista()));
-        entity.setAbsolucionReclamosUrl(reemplazarSiHayNuevo(entity.getAbsolucionReclamosUrl(), request.getAbsolucionReclamos()));
-        entity.setResultadosFinalesUrl(reemplazarSiHayNuevo(entity.getResultadosFinalesUrl(), request.getResultadosFinales()));
+        mapper.updateFromRequest(request, entity); // actualiza campos simples
+
+
+// indexar documentos existentes por tipo
+        var byTipo = entity.getDocumentos().stream()
+                .collect(java.util.stream.Collectors.toMap(d -> d.getTipo(), d -> d, (a,b)->a));
+
+
+        java.util.Map<DocumentoTipo, MultipartFile> archivos = new java.util.LinkedHashMap<>();
+        archivos.put(DocumentoTipo.BASES, request.getBases());
+        archivos.put(DocumentoTipo.ANEXOS, request.getAnexos());
+        archivos.put(DocumentoTipo.COMUNICADO1, request.getComunicado1());
+        archivos.put(DocumentoTipo.COMUNICADO2, request.getComunicado2());
+        archivos.put(DocumentoTipo.EVAL_CURRICULAR, request.getEvaluacionCurricular());
+        archivos.put(DocumentoTipo.EVAL_ENTREVISTA, request.getEvaluacionEntrevista());
+        archivos.put(DocumentoTipo.ABSOLUCION_RECLAMOS, request.getAbsolucionReclamos());
+        archivos.put(DocumentoTipo.RESULTADOS_FINALES, request.getResultadosFinales());
+
+
+        for (var entry : archivos.entrySet()) {
+            DocumentoTipo tipo = entry.getKey();
+            MultipartFile mf = entry.getValue();
+            if (mf != null && !mf.isEmpty()) {
+                ConvocatoriaDocumentoEntity doc = byTipo.get(tipo);
+                if (doc == null) {
+                    doc = new ConvocatoriaDocumentoEntity();
+                    doc.setConvocatoria(entity);
+                    doc.setTipo(tipo);
+                    entity.getDocumentos().add(doc);
+                    byTipo.put(tipo, doc);
+                }
+                replaceFile(doc, mf); // elimina anterior y guarda nuevo
+// no cambiamos habilitado/título/orden aquí (lo hará config si llega)
+            }
+        }
+
+
+// Aplica configuración
+        applyConfig(entity, request.getConfig());
+
 
         entity.setResponsable("Admin Update");
-        entity.setFechaModificacion(LocalDate.now());
+        entity.setFechaModificacion(java.time.LocalDate.now());
+
 
         ConvocatoriaCasEntity updated = repo.save(entity);
-        return withPublicUrls(mapper.toResponse(updated));
+
+
+        ConvocatoriaCasResponse res = mapper.toResponse(updated);
+        res.setDocumentos(mapDocs(updated.getDocumentos()));
+        res = withPublicUrls(res);
+        return res;
     }
 
     @Override
@@ -104,16 +191,28 @@ public class ConvocatoriaCasServiceImpl implements ConvocatoriaCasService {
         ConvocatoriaCasEntity entity = repo.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Convocatoria no encontrada con ID: " + id));
 
-        FileUploadUtil.eliminarArchivo(carpetaDestino, entity.getBasesUrl());
-        FileUploadUtil.eliminarArchivo(carpetaDestino, entity.getAnexosUrl());
-        FileUploadUtil.eliminarArchivo(carpetaDestino, entity.getComunicado1Url());
-        FileUploadUtil.eliminarArchivo(carpetaDestino, entity.getComunicado2Url());
-        FileUploadUtil.eliminarArchivo(carpetaDestino, entity.getEvaluacionCurricularUrl());
-        FileUploadUtil.eliminarArchivo(carpetaDestino, entity.getEvaluacionEntrevistaUrl());
-        FileUploadUtil.eliminarArchivo(carpetaDestino, entity.getAbsolucionReclamosUrl());
-        FileUploadUtil.eliminarArchivo(carpetaDestino, entity.getResultadosFinalesUrl());
 
+        for (var d : entity.getDocumentos()) {
+            FileUploadUtil.eliminarArchivo(carpetaDestino, d.getUrl());
+        }
+// Por orphanRemoval=true, al hacer repo.deleteById se eliminan hijos
         repo.deleteById(id);
+    }
+
+    @Override
+    @Transactional
+    public ConvocatoriaCasResponse updateDocsConfig(Integer id, List<DocumentoConfigRequest> config){
+        ConvocatoriaCasEntity entity = repo.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Convocatoria no encontrada con ID: " + id));
+        applyConfig(entity, config); // la misma del servicio
+        entity.setFechaModificacion(java.time.LocalDate.now());
+        ConvocatoriaCasEntity saved = repo.save(entity);
+
+
+        ConvocatoriaCasResponse r = mapper.toResponse(saved);
+        r.setDocumentos(mapDocs(saved.getDocumentos()));
+        r = withPublicUrls(r);
+        return r;
     }
 
     private String guardarYUrl(MultipartFile file) {
@@ -149,6 +248,71 @@ public class ConvocatoriaCasServiceImpl implements ConvocatoriaCasService {
         r.setAbsolucionReclamosUrl(   toPublicUrl(r.getAbsolucionReclamosUrl()));
         r.setResultadosFinalesUrl(    toPublicUrl(r.getResultadosFinalesUrl()));
         return r;
+    }
+
+    private DocumentoItemResponse toDocResponse(ConvocatoriaDocumentoEntity e) {
+        DocumentoItemResponse r = new DocumentoItemResponse();
+        r.setTipo(e.getTipo().name());
+        r.setTitulo(e.getTitulo());
+        r.setDescripcion(e.getDescripcion());
+        r.setUrl(toPublicUrl(e.getUrl()));
+        r.setHabilitado(Boolean.TRUE.equals(e.getHabilitado()));
+        r.setOrden(e.getOrden());
+        return r;
+    }
+
+
+    private List<DocumentoItemResponse> mapDocs(List<ConvocatoriaDocumentoEntity> docs) {
+        return docs == null ? java.util.Collections.emptyList() :
+                docs.stream()
+                        .sorted(java.util.Comparator.comparing(d -> d.getOrden() == null ? 0 : d.getOrden()))
+                        .map(this::toDocResponse)
+                        .toList();
+    }
+
+    private void applyConfig(ConvocatoriaCasEntity entity, List<DocumentoConfigRequest> cfgList) {
+        if (cfgList == null || cfgList.isEmpty()) return;
+
+        var byTipo = entity.getDocumentos().stream()
+                .collect(java.util.stream.Collectors.toMap(d -> d.getTipo().name(), d -> d, (a,b)->a));
+
+        for (DocumentoConfigRequest c : cfgList) {
+            if (c.getTipo() == null) continue;
+            DocumentoTipo tipo;
+            try {
+                tipo = DocumentoTipo.valueOf(c.getTipo());
+            } catch (IllegalArgumentException ex) {
+                throw new IllegalArgumentException("Tipo de documento inválido: " + c.getTipo());
+            }
+            var doc = byTipo.get(tipo.name());
+            if (doc == null) {
+                doc = new ConvocatoriaDocumentoEntity();
+                doc.setConvocatoria(entity);
+                doc.setTipo(tipo);
+                entity.getDocumentos().add(doc);
+                byTipo.put(tipo.name(), doc);
+            }
+            if (c.getHabilitado() != null) doc.setHabilitado(c.getHabilitado());
+            if (c.getTitulo() != null) doc.setTitulo(c.getTitulo());
+            if (c.getDescripcion() != null) doc.setDescripcion(c.getDescripcion());
+            if (c.getOrden() != null) doc.setOrden(c.getOrden());
+        }
+    }
+
+
+    private String saveFile(MultipartFile file) {
+        if (file == null || file.isEmpty()) return null;
+        String nombre = FileUploadUtil.guardarArchivo(file, carpetaDestino);
+        return "cas/" + nombre;
+    }
+
+
+    private void replaceFile(ConvocatoriaDocumentoEntity doc, MultipartFile nuevo) {
+        if (nuevo == null || nuevo.isEmpty()) return; // no cambia
+        if (doc.getUrl() != null) {
+            FileUploadUtil.eliminarArchivo(carpetaDestino, doc.getUrl());
+        }
+        doc.setUrl(saveFile(nuevo));
     }
 
 
